[gd_scene load_steps=10 format=2]

[ext_resource path="res://ASSETS/GRAPHICS/MISCS/Win/MOULUE/MOULUE_win_left.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/GRAPHICS/MISCS/Win/COUILLU/COUILLU_win_left.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/GRAPHICS/MISCS/Win/COUILLU/COUILLU_win_right.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/GRAPHICS/MISCS/Win/MOULUE/MOULUE_win_right.png" type="Texture" id=4]
[ext_resource path="res://SCRIPTS/World/Win_Screen.gd" type="Script" id=5]
[ext_resource path="res://ASSETS/SOUNDS/EFFECTS/ANNONCES/moulue chez ta mere 48.wav" type="AudioStream" id=6]
[ext_resource path="res://ASSETS/SOUNDS/EFFECTS/ANNONCES/couillu galette 441.wav" type="AudioStream" id=7]
[ext_resource path="res://ASSETS/SOUNDS/MUSIC/VICTORY.wav" type="AudioStream" id=8]
[ext_resource path="res://SCENES/Fade_scene.tscn" type="PackedScene" id=9]

[node name="Win" type="Node2D"]
script = ExtResource( 5 )

[node name="Moulue_Win_left" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 1 )

[node name="Moulue_Win_right" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="Couillu_Win_left" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="Couillu_Win_right" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="Moulue_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
bus = "BRUITAGES"

[node name="Couillu_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )
bus = "BRUITAGES"

[node name="Victory_Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
autoplay = true
bus = "MUSIQUE"

[node name="TransitionScreen" parent="." instance=ExtResource( 9 )]

[connection signal="transitioned" from="TransitionScreen" to="." method="_on_TransitionScreen_transitioned"]
